# Galfit-uv

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/galfit-uv/: SKILL.md
.claude/skills/galfit-uv/references/: api-reference.md  cube-measurement.md  index.md  uv-fitting.md
.github/workflows/: deploy.yml
docs/: api.md  examples.md  index.md
docs/css/: extra.css
galfit_uv/: __init__.py  export.py  fit.py  lineprofiles.py  measure.py  models.py  plot.py
galfit_uv/demo/: GQC_J0054-4955_uv.txt  report_2comp.md  report_measure.md  report_sersic.md  run_demo_2comp.py  run_demo_measure.py  run_demo_sersic.py  uvtable_model_2comp.txt  uvtable_model_sersic.txt
tests/: conftest.py  test_export.py  test_fit.py  test_lineprofiles.py  test_measure.py  test_models.py  test_plot.py
